--- a/resources/fxml/login_user.fxml
+++ b/resources/fxml/login_user.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.LoginUserController">
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" />
@@ -22,8 +21,8 @@
     <children>
         <Label text="Username:" GridPane.rowIndex="1" />
         <Label text="Password:" GridPane.rowIndex="2" />
-        <PasswordField GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-        <TextField GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+        <PasswordField fx:id="fldPassword" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+        <TextField fx:id="fldUsername" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
         <Label text="Login to you account" GridPane.columnSpan="3" GridPane.halignment="LEFT">
             <font>
                 <Font name="Times New Roman" size="16.0" />
@@ -31,8 +30,8 @@
         </Label>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
             <buttons>
-                <Button defaultButton="true" mnemonicParsing="false" text="Login" />
-                <Button cancelButton="true" mnemonicParsing="false" text="Back" />
+                <Button defaultButton="true" mnemonicParsing="false" onAction="#actionLogin" text="Login" />
+                <Button cancelButton="true" mnemonicParsing="false" onAction="#actionBack" text="Back" />
             </buttons>
         </ButtonBar>
         <Line endX="100.0" startX="-100.0" GridPane.columnSpan="2" GridPane.valignment="BOTTOM" />
