--- a/resources/fxml/login_user.fxml
+++ b/resources/fxml/login_user.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.LoginUserController">
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" />
@@ -19,19 +20,19 @@
         <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <children>
-        <Label text="Username:" GridPane.rowIndex="1" />
-        <Label text="Password:" GridPane.rowIndex="2" />
+        <Label text="%username" GridPane.rowIndex="1" />
+        <Label text="%password" GridPane.rowIndex="2" />
         <PasswordField fx:id="fldPassword" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
         <TextField fx:id="fldUsername" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-        <Label text="Login to you account" GridPane.columnSpan="3" GridPane.halignment="LEFT">
+        <Label text="%logAcc" GridPane.columnSpan="3" GridPane.halignment="LEFT">
             <font>
                 <Font name="Times New Roman" size="16.0" />
             </font>
         </Label>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
             <buttons>
-                <Button defaultButton="true" mnemonicParsing="false" onAction="#actionLogin" text="Login" />
-                <Button cancelButton="true" mnemonicParsing="false" onAction="#actionBack" text="Back" />
+                <Button defaultButton="true" mnemonicParsing="false" onAction="#actionLogin" text="%login" />
+                <Button cancelButton="true" mnemonicParsing="false" onAction="#actionBack" text="%back" />
             </buttons>
         </ButtonBar>
         <Line endX="100.0" startX="-100.0" GridPane.columnSpan="2" GridPane.valignment="BOTTOM" />
