--- a/resources/fxml/register_user.fxml
+++ b/resources/fxml/register_user.fxml
@@ -27,7 +27,7 @@
       <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <children>
-        <Label text="Enter you information:" GridPane.columnSpan="2">
+        <Label text="%enterInf" GridPane.columnSpan="2">
             <font>
                 <Font name="Times New Roman" size="14.0" />
             </font>
@@ -44,8 +44,8 @@
         <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
         <ButtonBar GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="9">
             <buttons>
-                <Button defaultButton="true" mnemonicParsing="false" onAction="#actionRegister" text="Register" />
-                <Button mnemonicParsing="false" onAction="#actionBack" text="Back" />
+                <Button defaultButton="true" mnemonicParsing="false" onAction="#actionRegister" text="%register" />
+                <Button mnemonicParsing="false" onAction="#actionBack" text="%back" />
             </buttons>
         </ButtonBar>
       <Label prefHeight="17.0" prefWidth="119.0" text="%dName" GridPane.rowIndex="6" />
