- Implmentirana podrška "dark-theme" temi - Implementirana funkcionalnost odabira načina plaćanja svoje košarice - Izvršene preprave u poćetnom view-u

--- a/resources/fxml/main_apothecary.fxml
+++ b/resources/fxml/main_apothecary.fxml
@@ -11,17 +11,31 @@
         <menus>
           <Menu fx:id="menuFile" text="%file">
             <items>
+                  <MenuItem fx:id="menuAddDrug" mnemonicParsing="false" onAction="#actionAddNewDrug" text="%addDrug" />
+                  <MenuItem fx:id="menuLogout" mnemonicParsing="false" onAction="#actionLogout" text="%logout" />
+              <MenuItem fx:id="menuExit" onAction="#actionClose" text="%exit" />
+            </items>
+          </Menu>
+            <Menu fx:id="menuView" mnemonicParsing="false" text="%view">
+              <items>
+                  <Menu fx:id="menuTheme" mnemonicParsing="false" text="%theme">
+                    <items>
+                        <RadioMenuItem fx:id="menuLight" mnemonicParsing="false" onAction="#actionLightTheme" text="%lightTheme">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="themeGroup" />
+                           </toggleGroup>
+                        </RadioMenuItem>
+                        <RadioMenuItem fx:id="menuDark" mnemonicParsing="false" onAction="#actionDarkTheme" text="%darkTheme" toggleGroup="$themeGroup" />
+                    </items>
+                  </Menu>
                   <Menu fx:id="menuLanguage" mnemonicParsing="false" text="%language">
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#actionBosanski" text="Bosanski" />
                         <MenuItem mnemonicParsing="false" onAction="#actionEngleski" text="English" />
                     </items>
                   </Menu>
-                  <MenuItem fx:id="menuAddDrug" mnemonicParsing="false" onAction="#actionAddNewDrug" text="%addDrug" />
-                  <MenuItem fx:id="menuLogout" mnemonicParsing="false" onAction="#actionLogout" text="%logout" />
-              <MenuItem fx:id="menuExit" onAction="#actionClose" text="%exit" />
-            </items>
-          </Menu>
+              </items>
+            </Menu>
           <Menu fx:id="menuHelp" text="%help">
             <items>
               <MenuItem fx:id="menuAbout" mnemonicParsing="false" onAction="#actionAbout" text="%about" />
