--- a/resources/fxml/start.fxml
+++ b/resources/fxml/start.fxml
@@ -2,16 +2,19 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.StartController">
   <columnConstraints>
-    <ColumnConstraints hgrow="ALWAYS" maxWidth="579.6666666666666" minWidth="10.0" prefWidth="533.3333333333334" />
+    <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="ALWAYS" maxWidth="136.66666666666663" minWidth="0.0" prefWidth="136.66666666666663" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
@@ -23,31 +26,31 @@
       <RowConstraints maxHeight="71.33333333333331" minHeight="10.0" prefHeight="32.0" vgrow="ALWAYS" />
   </rowConstraints>
    <children>
-      <Label fx:id="lbHeadline" text="%headline" underline="true" GridPane.columnSpan="2" GridPane.rowSpan="2">
+      <Label fx:id="lbHeadline" text="%headline" underline="true" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="2">
          <font>
             <Font name="Times New Roman" size="64.0" />
          </font></Label>
-      <Label fx:id="lbAccTypeMsg" minHeight="-Infinity" minWidth="-Infinity" text="%accountTypeMsg" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+      <Label fx:id="lbAccTypeMsg" minHeight="-Infinity" minWidth="-Infinity" text="%accountTypeMsg" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
          <font>
             <Font name="Times New Roman" size="24.0" />
          </font>
          <GridPane.margin>
             <Insets top="5.0" />
          </GridPane.margin></Label>
-      <Button fx:id="btnUserAccount" mnemonicParsing="false" onAction="#actionOpenLoginUser" text="%userAcc" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <Button fx:id="btnUserAccount" mnemonicParsing="false" onAction="#actionOpenLoginUser" text="%userAcc" GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button fx:id="btnApotAcc" mnemonicParsing="false" onAction="#actionOpenALoginpothecary" text="%apotAcc" GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+      <Button fx:id="btnApotAcc" mnemonicParsing="false" onAction="#actionOpenLoginApothecary" text="%apotAcc" GridPane.halignment="LEFT" GridPane.rowIndex="7" GridPane.valignment="CENTER">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <ImageView fx:id="idImage" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowSpan="2" GridPane.valignment="TOP">
+      <ImageView fx:id="idImage" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="TOP">
          <GridPane.margin>
             <Insets right="10.0" />
          </GridPane.margin></ImageView>
-      <Line endX="400.0" startX="-100.0" GridPane.rowIndex="7" GridPane.valignment="TOP" />
-      <HBox prefHeight="56.0" prefWidth="533.0" spacing="15.0" GridPane.rowIndex="7" GridPane.rowSpan="2">
+      <Line endX="400.0" startX="-100.0" GridPane.rowIndex="8" GridPane.valignment="TOP" />
+      <HBox prefHeight="56.0" prefWidth="533.0" spacing="15.0" GridPane.rowIndex="8" GridPane.rowSpan="2">
          <GridPane.margin>
             <Insets top="15.0" />
          </GridPane.margin>
@@ -63,13 +66,44 @@
             <Button fx:id="btnCreateAcc" mnemonicParsing="false" onAction="#actionRegister" text="%createAcc" />
          </children>
       </HBox>
-      <Button fx:id="btnExit" cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="BOTTOM">
+      <Button fx:id="btnExit" cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="9" GridPane.valignment="BOTTOM">
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
          </padding>
       </Button>
-      <ChoiceBox fx:id="cbLanguage" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label fx:id="lbChoose" text="%lgChoose" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+      <MenuBar GridPane.columnSpan="3">
+        <menus>
+          <Menu fx:id="menuFile" mnemonicParsing="false" text="%file">
+            <items>
+                  <MenuItem fx:id="menuCreateAcc" mnemonicParsing="false" onAction="#actionRegister" text="%createAcc" />
+              <MenuItem fx:id="menuExit" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
+            </items>
+          </Menu>
+          <Menu fx:id="menuVew" mnemonicParsing="false" text="%view">
+               <items>
+                  <Menu fx:id="menuLanguage" mnemonicParsing="false" text="%language">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#actionBosanski" text="Bosanski" />
+                        <MenuItem mnemonicParsing="false" onAction="#actionEnglish" text="English" />
+                    </items>
+                  </Menu>
+                  <Menu fx:id="menuTheme" mnemonicParsing="false" text="%theme">
+                    <items>
+                      <MenuItem fx:id="menuLight" mnemonicParsing="false" onAction="#actionLightTheme" text="%lightTheme" />
+                        <MenuItem fx:id="menuDark" mnemonicParsing="false" onAction="#actionDarkTheme" text="%darkTheme" />
+                    </items>
+                  </Menu>
+               </items>
+          </Menu>
+          <Menu fx:id="menuHelp" mnemonicParsing="false" text="%help">
+            <items>
+                  <MenuItem fx:id="menuItemHelp" mnemonicParsing="false" onAction="#actionHelp" text="%help" />
+              <MenuItem fx:id="menuAbout" mnemonicParsing="false" onAction="#actionAbout" text="%about" />
+                  <MenuItem fx:id="menuKeyboard" mnemonicParsing="false" onAction="#actionKeyboardShortcuts" text="%keyboardShortcuts" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
    <padding>
       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
